[metadata]
name = bids_manager
version=0.3.4
description = Package to collect, organise, manage and analyse neuroscience data in BIDS format
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Dynamap/BIDS_Manager/tree/dev
author = Roehri Nicolas, Medina Samuel, and Jegou Aude
license = GPL 3.0
license_file = LICENSE
classifiers =
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Operating System :: Microsoft :: Windows
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Topic :: Scientific/Engineering :: Bio-Informatics
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
project_urls =
    Documentation = https://github.com/Dynamap/BIDS_Manager/tree/dev/Tutorial.pdf
    Source = https://github.com/Dynamap/BIDS_Manager/tree/dev


entry_points={'console_scripts': ['bids_manager=bids_manager:main']},


[options]
zip_safe = False
packages = find:
platforms = windows
include_package_data = True
install_requires =
    PyQt5 >=5.15.0
    pydicom
    paramiko
    bids_validator
    scipy
    xlrd
    nibabel
    tkcalendar
    pywin32 >=228
    pysimplegui
python_requires = >=3.7

[bdist_wheel]
universal = 1

[options.entry_points]
console_scripts =
    bids_manager = bids_manager:main